# HuffmanAlgorithm

HuffmanAlgUI/: CMakeLists.txt  HuffmanAlgUI.pro  HuffmanAlgUI.pro.user.2227a35  encoder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
build-HuffmanAlgUI-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-HuffmanAlgUI-Desktop_Qt_6_2_0_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp  qrc_resources.cpp
